--- a/boss-child/css/custom.css
+++ b/boss-child/css/custom.css
@@ -260,3 +260,14 @@ body .entry-content #features p {
 		border-bottom: none !important;
 	}
 }
+
+#gtranslate_selector {
+	background: rgba(255,255,255,.1);
+  color: #999;
+  line-height: 1;
+  font-weight: 600;
+  font-size: 16px;
+  border: none;
+  text-transform: unset;
+  font-family: Rubik;
+}
