banner style fix

--- a/bs-oecd-pisa-customization/assets/css/bs-style.css
+++ b/bs-oecd-pisa-customization/assets/css/bs-style.css
@@ -32,14 +32,71 @@
 /* FORUM BANNERS */
 .bs-forum-banner {
   margin: 30px;
-  padding: 30px;
+  padding: 18px;
   border: 3px solid #ea6645;
   box-shadow: 0 3px 3px #444;
+  font-size: 14px;
+  position: relative;
+}
+
+.bs-forum-banner h2 {
+  font-size: 26px;
 }
 
 .bs-forum-banner h2,
 .bs-forum-banner p,
 .bs-forum-banner ul,
 .bs-forum-banner ol {
-  margin-bottom: 30px;
+  margin-bottom: 16px;
+}
+
+.bs-forum-banner h2:last-child,
+.bs-forum-banner p:last-child,
+.bs-forum-banner ul:last-child,
+.bs-forum-banner ol:last-child {
+  margin-bottom: 0;
+}
+
+.bs-forum-banner ul {
+  list-style: disc;
+  padding-left: 16px;
+}
+
+.bs-forum-banner-cta-wrapper {
+  position: absolute;
+  top: 18px;
+  right: 18px;
+}
+
+.bs-close-forum-banner {
+  width: auto;
+  padding: 8px 10px;
+  line-height: 1;
+}
+
+.bs-forum-banner-w-bg {
+  background-size: cover;
+  background-position: center;
+  color: #fff;
+  border: none;
+  z-index: 0;
+}
+
+.bs-forum-banner-w-bg::before {
+  content: "";
+  display: block;
+  background: rgba(4, 44, 65, 0.7);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+}
+
+.bs-forum-banner-w-bg h2,
+.bs-forum-banner-w-bg p,
+.bs-forum-banner-w-bg ul,
+.bs-forum-banner-w-bg ol {
+  color: #fff;
 }
