--- a/boss-child/css/custom.css
+++ b/boss-child/css/custom.css
@@ -638,3 +638,87 @@ body:not(.boxed) #bbpress-forums .subheader {
 #case-form .acf-form-submit input {
 	display: none;
 }
+
+#case-form {
+	float: left;
+	width: 74%;
+}
+
+.case-study-form-widget-area {
+	float: left;
+  width: 26%;
+  margin-top: 22px;
+  padding: 15px 12px;
+	position: relative;
+	z-index: 10;
+}
+
+.case-study-form-widget-area ul {
+	list-style: none;
+}
+
+.case-study-form-widget-area ul .step-wrapper {
+	margin-left: 0;
+}
+
+.case-study-form-widget-area ul .step-wrapper .fas {
+	display: block;
+  text-align: center;
+  font-size: 32px;
+}
+
+.case-study-form-widget-area ul .step-wrapper a {
+	width: 100%;
+	font-size: 1.2em;
+	font-weight: bold;
+	line-height: 1.2;
+}
+
+.case-study-form-widget-area ul .step-wrapper a::after {
+	content: "\f017";
+	font-family: "Font Awesome 5 Free";
+	font-size: 17px;
+	line-height: 23px;
+	width: 24px;
+	height: 24px;
+	float: right;
+}
+
+.case-study-form-widget-area ul .step-wrapper:last-child a {
+	pointer-events: none;
+}
+
+.case-study-form-widget-area ul .step-wrapper:last-child a::after {
+	content: "\f11e";
+}
+
+.case-study-form-widget-area ul .step-wrapper a.active {
+	-moz-box-shadow: inset 0 0 1000px rgba(0,0,0,.30);
+	-webkit-box-shadow: inset 0 0 1000px rgba(0,0,0,.30);
+	box-shadow: inset 0 0 1000px rgba(0,0,0,.30);
+	pointer-events: none;
+}
+
+.case-study-form-widget-area ul .step-wrapper a.active::after {
+	content: "\f141";
+}
+
+.case-study-form-widget-area ul .step-wrapper a.validated::after {
+	content: "\f00c";
+	color: #C6DA50;
+}
+
+.case-study-form-widget-area ul .step-wrapper a.haserror::after {
+	content: "\f00d";
+	color: #D04432;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+	line-height: 15px !important;
+}
+.select2-container--default .select2-selection--single {
+	padding: 6px 13px !important;
+}
+[data-taxonomy="description-tag"] .acf-checkbox-list {
+	columns: 3;
+}
